--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
     "next": "15.5.4",
+    "phosphor-icons": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
